# netcdf_tools

./: CLAUDE.md  README.md  pyproject.toml  regrid_yearly_parallel.py  submit_regrid_yearly.sh  test.json
grids/: e3sm0125.json
src/netcdf_tools/: __init__.py  extract.py  inspect.py  regrid.py  timeseries.py
src/netcdf_tools/regrid/: getgrid.py  regrid.py  spires.py
tests/: quickRegrid.py  quickSpires.py  quickTimeseries.py  spires_regridded_test.nc
tests/interactive/: mapNetCDF.ipynb
utilities/: checktime.sh  download_nsidc.sh  inspectNetCDF.py  mapNetCDF.ipynb  ncvar_extractor.py  netCDFdem_demo.ipynb  netcdf2timeseries.py  process_spires.py  readme.MD  regrid_conservative.py
